--- a/sudo-make-deploy-cloudsec/night.css
+++ b/sudo-make-deploy-cloudsec/night.css
@@ -229,7 +229,7 @@ section.has-light-background, section.has-light-background h1, section.has-light
   display: block;
   padding: 5px;
   overflow: auto;
-  max-height: 400px;
+  max-height: 80%;
   word-wrap: normal;
 }
 
